Fix bad alignment on mobile

--- a/src/features/roller/Intent.module.less
+++ b/src/features/roller/Intent.module.less
@@ -14,6 +14,12 @@
     padding-right: 24px + @extra-space;
   }
 
+  @media (max-width: @screen-sm) {
+    :global(.ant-form-item) {
+      flex-direction: row;
+    }
+  }
+
   fieldset {
     display: flex;
     justify-content: center;
